--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1> DREAM Project: Réseaux Intelligents distribués pour une agriculture inclusive, résiliente et adaptative dans le bassin méditerranéen </h1>
+<h1> DREAM Project </h1>
